// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscriptionTypeFormatter renders link to a host 1`] = `
<td>
  <span>
    Guests of

    <a
      href="/content_hosts/83"
    >
      host.example.com
    </a>
  </span>
</td>
`;

exports[`subscriptionTypeFormatter renders physical subscriptions 1`] = `
<td>
  Physical
</td>
`;

exports[`subscriptionTypeFormatter renders temporary subscriptions 1`] = `
<td>
  Temporary
</td>
`;

exports[`subscriptionTypeFormatter renders virtual subscriptions 1`] = `
<td>
  Virtual
</td>
`;
